# dw2ide-bindings

./: .editorconfig  .gitignore  CMakeJS.cmake  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  index.d.ts  index.js  index.mjs  package-lock.json  package.json
include/: dw2ide-bindings.h
src/: compat.cpp  dw2ide-bindings.cpp  helper-macros.h  helpers.cpp  helpers.h  impl.h  initializer.cpp  initializer.h  pch.h
src/impl/: debug-break.cpp  deisolate.cpp  get-image-depth.cpp  get-image-dimensions.cpp  get-image-format.cpp  get-image-height.cpp  get-image-mip-levels.cpp  get-image-texture-type.cpp  get-image-width.cpp  get-isolation-context-id.cpp  get-last-exception.cpp  get-object-offset.cpp  get-object-simplified-type.cpp  get-object-size.cpp  get-object-type.cpp  handle-to-string.cpp  instantiate-bundle-item.cpp  is-image.cpp  load-bundle.cpp  new-isolation-context.cpp  query-bundle-objects.cpp  read-queried-bundle-object.cpp  release-handle.cpp  show-message-box.cpp  try-convert-image-to-buffer-webp.cpp  try-convert-image-to-stream-webp.cpp  try-export-image-as-dds.cpp  try-export-image-as-webp.cpp  try-export-object.cpp  try-get-object-id.cpp
tests/: CMakeLists.txt  runtime.js
